# gqldbms

./: .gitignore  .gitmodules  Cargo.toml  README.md
database/: canonical.gql  config.toml
database/posts/: structure.json
public/: data.json  graphiql.html  index.html  instropection.gql  schema.gql
src/: canonical.rs  indexing.rs  main.rs  parsing.rs  resolver.rs  schema.rs  structure.rs  utility.rs
