[package]
name = "gqldbms"
version = "0.1.0"
authors = ["Wildan Mubarok <willnode@wellosoft.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
hyper = "0.12"
futures = "0.1"
graphql-parser = "0.2.3"
